--- a/templates/summary_app_index.html
+++ b/templates/summary_app_index.html
@@ -2,41 +2,60 @@
 
 <head>
   <title>Simple Text Summarizer</title>
-  <meta content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <style>
   div.all_text {
   text-align: center;
   margin-left: 10%;
   margin-right: 10%;
-  margin-bottom: 5%;}
+  margin-bottom: 5%;
+  margin-top: 5%;}
 
   </style>
 </head>
 
+<!-- Grey with black text -->
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+      <a class="nav-link" href="#">Text Summarizer</a>
+    </li>
+    <li class="nav-item">
+    <!--  <a class="nav-link" href="#">How it works</a> -->
+    </li>
+  </ul>
+</nav>
+
+
 <body >
     <div class="all_text">
     
-      <h1>Text Summarizer </h1><br>
+        
+      {% for message in form.ratio.errors %}
+      <div>{{ message }}</div> <br>
+      {% endfor %}
+
+      {% for message in form.text.errors %}
+      <div>{{ message }}</div> <br>  
+      {% endfor %}
+
+ <!--     <h1>Text Summarizer </h1><br> -->
       <form method=post action="">
-        <table align="center" >
+      <table align="center" >
           {% for field in form %}
-          <tr>
+          <tr >
             <td>{{ field.label }}</td>
             <td>{{ field }}</td>
           </tr>
           {% endfor %}
-        </table>
-        <p><input type=submit value=Submit>
+        </table></br>
+        <p><input type=submit value=Summarize>
       </form><br></p>
-    
-      <p>
-        {% if prediction != None %}
-        <h1>Original Text </h1><br>        
-        <p> {{text}} </p>
-        <h1>Summary </h1><br>        
-        <p> {{prediction}} </p>
-        {% endif %}
-      </p>
     
     </div>
 
