--- a/templates/summary_app_output.html
+++ b/templates/summary_app_output.html
@@ -1,11 +1,65 @@
 <html>
-  <head>
-    <title>Text Summarizer Output</title>
-    <meta content="">
-    <style></style>
-  </head>
-  <body>
-    <h1>Prediction: </h1><br>
-    <p>  {{prediction}} </p>
-  </body>
+
+<head>
+  <title>Simple Text Summarizer</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <style>
+  div.all_text {
+  text-align: center;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 5%;
+  margin-top: 5%;}
+
+  </style>
+</head>
+
+<!-- Grey with black text -->
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+      <a class="nav-link" href="#">Text Summarizer</a>
+    </li>
+    <li class="nav-item">
+    <!--  <a class="nav-link" href="#">How it works</a> -->
+    </li>
+  </ul>
+</nav>
+
+
+<body >
+    <div class="all_text">
+
+
+ <!--     <h1>Text Summarizer </h1><br> -->
+      <form method=post action="">
+      <table align="center" >
+          {% for field in form %}
+          <tr >
+            <td>{{ field.label }}</td>
+            <td>{{ field }}</td>
+          </tr>
+          {% endfor %}
+        </table></br>
+        <p><input type=submit value=Summarize>
+      </form><br></p>
+    
+      <p>
+        {% if prediction != '' %}
+        <h1>Summary </h1><br>        
+        <p> {{prediction}} </p>
+        <h1>Original Text </h1><br>        
+        <p> {{text}} </p>  
+        {% endif %}
+      </p>
+    
+    </div>
+
+</body>
+
 </html>
